# mushaf-android

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/digitalkhatt/mushaf/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hb_skia_canvas.cpp  hb_skia_canvas.h  text-rendering.cpp
app/src/main/java/org/digitalkhatt/mushaf/: MainActivity.kt  MushafApp.kt  PageAdapter.kt  PageView.kt
app/src/main/java/org/digitalkhatt/mushaf/data/: Page.kt
app/src/main/res/layout/: activity_main.xml  page_item.xml
app/src/main/res/menu/: mainmenu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/digitalkhatt/mushaf/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
